[project]
name = "flax-arma"
version = "0.1.0"
description = "Toy ARMA model in JAX/Flax, just for learning purposes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.1",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "models"
